Bulk push, moved a bunch of stuff, rewrote many things. This commit is not production ready, there seems to be a fundamental flaw in the implementation side of things.